--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -9,3 +9,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
