feat: add login and register pages

--- a/frontend/src/styles/_fonts.scss
+++ b/frontend/src/styles/_fonts.scss
@@ -1,5 +1,15 @@
+@import './../vendors/fonts/Roboto/Roboto.scss';
+
 @mixin mainFont {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
+}
+
+@mixin asterFont {
+  font-family: 'Aster';
   font-style: normal;
   font-weight: 400;
   line-height: normal;
