--- a/frontend/src/components/ExpertCard/ExpertCard.scss
+++ b/frontend/src/components/ExpertCard/ExpertCard.scss
@@ -14,6 +14,7 @@
   align-items: center;
   gap: 16px;
   box-sizing: border-box;
+  position: relative;
 
   &__image {
     width: 124px;
@@ -21,10 +22,12 @@
     border-radius: 50%;
   }
   &__name {
+    @include mainFont;
     margin: 0;
     padding: 0;
     color: $blackColor;
-    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    // font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -32,25 +35,27 @@
   }
 
   &__like {
-    width: 265px;
+    width: 30px;
     height: 28px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    & svg path {
-      stroke: $blackColor;
-    }
-    &_active svg {
-      fill: $blackColor;
-    }
-
-    &-btn {
-      padding: 0;
-      background-color: transparent;
-      cursor: pointer;
-      border: none;
+    background-color: $grayLightColor;
+    padding: 0;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    & svg {
       width: 14px;
       height: 12px;
+      stroke: $blackColor;
+      fill: none;
+    }
+    &_active svg {
+      fill: $violetColor;
     }
   }
 }
