feat: create expert page, fix header

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -10,10 +10,15 @@ body {
 }
 
 main {
-  width: 100vw;
-  min-height: 100vh;
+  max-width: 1440px;
+  width: 100%;
+  // min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
 
+* {
+  outline: solid 1px red;
+}
