--- a/frontend/src/components/CardsContainer/CardsContainer.scss
+++ b/frontend/src/components/CardsContainer/CardsContainer.scss
@@ -5,9 +5,10 @@
   display: flex;
   flex-direction: column;
   gap: 56px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  max-width: 1280px;
+  width: 100%;
+  // max-width: 1440px;
 
   &__items {
     display: flex;
