--- a/frontend/src/components/Forms/Form.scss
+++ b/frontend/src/components/Forms/Form.scss
@@ -1,17 +1,20 @@
 @import './../../styles/global.scss';
 
 .form {
-  width: 500px;
-  margin: 0 auto;
-  padding: 16px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  border-radius: 16px;
-  background: $whiteColor;
-  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.08);
-
+  height: 100vh;
+  
+  &__form {
+    width: 500px;
+    margin: 0 auto;
+    padding: 16px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    border-radius: 16px;
+    background: $whiteColor;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.08);
+  }
   &__title {
     color: $blackColor;
     @include mainFont;
