--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -1,21 +1,25 @@
 @import './../../styles/global.scss';
 
 .header {
-  width: 100%;
+  width: 100vw;
+  margin: 0;
   height: 265px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: $violetColor;
-  margin: 0 auto;
 
   &__container {
-    box-sizing: border-box;
-    padding: 32px 80px 64px;
-    margin: 0 auto;
+    // box-sizing: border-box;
+    // padding: 0 80px;
+    // margin: 0 auto;
     max-width: 1440px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    gap: 16px;
     position: relative;
   }
 
@@ -23,7 +27,8 @@
     @include mainFont;
     color: $whiteColor;
     font-size: 64px;
-    margin: 0 0 16px;
+    max-height: 75px;
+    text-align: center;
     padding: 0;
   }
 
@@ -32,6 +37,7 @@
     color: $grayLightColor;
     text-align: center;
     font-size: 20px;
+    max-height: 46px;
     padding: 0;
     max-width: 846px;
   }
@@ -39,13 +45,17 @@
   &__partner {
     display: flex;
     flex-direction: row;
-    align-self: flex-start;
-    margin-left: 105px;
-    gap: 32px;
+    align-items: center;
+    // align-self: flex-start;
+    max-width: 1064px;
+    width: 100%;
+    // margin-left: 105px;
+    gap: 32px ;
 
     &-info {
       display: flex;
       flex-direction: column;
+      gap: 16px;
     }
   }
 
@@ -71,7 +81,7 @@
     border: 1px solid $grayLightColor;
     border-radius: 8px;
     position: absolute;
-    top: 32px;
+    top: calc(50% - 100.5px);
     cursor: pointer;
     height: 38px;
 
