--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -3,24 +3,23 @@
 .header {
   width: 100vw;
   margin: 0;
-  height: 265px;
+  min-height: 265px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: $violetColor;
+  position: relative;
 
   &__container {
-    // box-sizing: border-box;
-    // padding: 0 80px;
-    // margin: 0 auto;
     max-width: 1440px;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 16px;
+    box-sizing: border-box;
     gap: 16px;
-    position: relative;
   }
 
   &__title {
@@ -46,11 +45,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    // align-self: flex-start;
     max-width: 1064px;
     width: 100%;
-    // margin-left: 105px;
-    gap: 32px ;
+    gap: 32px;
 
     &-info {
       display: flex;
@@ -81,17 +78,135 @@
     border: 1px solid $grayLightColor;
     border-radius: 8px;
     position: absolute;
-    top: calc(50% - 100.5px);
+    top: 32px;
     cursor: pointer;
     height: 38px;
 
-    &-exit {
+    &_exit {
       width: 81px;
       right: 80px;
     }
-    &-prev {
+    &_back {
       width: 79px;
       left: 80px;
+    }
+
+    &-mob {
+      background-color: transparent;
+      width: 40px;
+      height: 40px;
+      border: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+      margin-bottom: 12px;
+      justify-self: flex-start;
+      position: absolute;
+      top: 12px;
+      cursor: pointer;
+
+      &_exit {
+        right: 16px;
+      }
+
+      &_back {
+        left: 16px;
+      }
+      & svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1380px) {
+  .header {
+    &__partner {
+      margin: 65px 0 0;
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    &__btn {
+      &_exit {
+        right: 60px;
+      }
+      &_back {
+        left: 60px;
+      }
+    }
+    &__role {
+      font-size: 28px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    height: 281px;
+    &__title {
+      font-size: 48px;
+    }
+
+    &__description {
+      font-size: 18px;
+      max-height: 95px;
+      max-width: 450px;
+    }
+
+    &__btn {
+      font-size: 14px;
+      padding: 6px 12px;
+      height: 32px;
+
+      &_exit {
+        right: 40px;
+      }
+      &_back {
+        left: 40px;
+      }
+    }
+
+    &__role {
+      font-size: 24px;
+    }
+  }
+}
+
+@media screen and (max-width: 590px) {
+  .header {
+    height: 100%;
+    &__title {
+      font-size: 36px;
+      max-height: 42px;
+    }
+
+    &__description {
+      font-size: 16px;
+      max-height: 95px;
+      max-width: 334px;
+    }
+
+    &__btn {
+      display: none;
+    }
+
+    &__partner {
+      // height: 300px;
+      margin: 0px;
+      padding: 64px 46px;
+      box-sizing: border-box;
+      flex-direction: column-reverse;
+      gap: 16px;
+    }
+
+    &__role {
+      font-size: 20px;
+      text-align: center;
     }
   }
 }
