--- a/frontend/src/components/ExpertCard/ExpertCard.scss
+++ b/frontend/src/components/ExpertCard/ExpertCard.scss
@@ -20,6 +20,8 @@
     width: 124px;
     height: 124px;
     border-radius: 50%;
+    cursor: pointer;
+
   }
   &__name {
     @include mainFont;
@@ -27,11 +29,15 @@
     padding: 0;
     color: $blackColor;
     text-align: center;
-    // font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    cursor: pointer;
+  }
+
+  &__link {
+    text-decoration: none;
   }
 
   &__like {
