--- a/frontend/src/components/Forms/Form.scss
+++ b/frontend/src/components/Forms/Form.scss
@@ -105,6 +105,17 @@
     margin-top: 8px;
     cursor: pointer;
   }
+
+  &__text {
+    text-align: center;
+    @include mainFont;
+    font-size: 16px;
+    & a {
+      text-decoration: none;
+      cursor: pointer;
+      color: $violetColor;
+    }
+  }
 }
 
 input[type='password'] {
